# frakt

./: .env  .gitignore  Cargo.toml  DemoServer.md  FAQ.md  IteratedSinZ.md  Julia.md  Mandelbrot.md  NewtonRaphsonZn.md  NovaNewtonRaphsonZn.md  README.md  TODO.md  `  justfile
.github/workflows/: rust.yml
blue-box/: Cargo.toml
blue-box/src/: lib.rs
blue-box/src/fractal/: fractal.rs  fractal_types.rs
blue-box/src/models/: fractal.rs  mod.rs  network.rs
blue-box/src/network/: client.rs  communication_types.rs  network.rs  server.rs
blue-box/src/tests/: fractal_test.rs  mod.rs  network_test.rs
blue-box/src/types/: desc.rs  fractal_type.rs  mod.rs  protocols.rs
blue-box/src/utils/: colors.rs  colors_test.rs  complex.rs  complex_test.rs  json.rs  json_test.rs  mod.rs
cmplx_nbr/: Cargo.toml
cmplx_nbr/src/: complex_test.rs  lib.rs
complex/: Cargo.toml
complex/src/: lib.rs  type.rs  types.rs
complex/tests/: compute_complex_operations.rs
complex_math/: Cargo.toml
complex_math/src/: lib.rs  test_complex.rs
deprecated/: main.rs
documentation/: DemoServer.md  Julia.md  Mandelbrot.md  justfile
frakt-trc/: Cargo.toml
jerry-smith/: Cargo.toml
jerry-smith/src/: main.rs
jerry-smith/src/models/: display.rs  mod.rs  server.rs
jerry-smith/src/utils/: config.rs
mr-meeseeks/: Cargo.toml  config.toml
mr-meeseeks/src/: config.rs  main.rs
network/: Cargo.toml
network/src/: lib.rs  lib_test.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
shared/: Cargo.toml
shared/src/: bin.rs  env_setup.rs  lib.rs  type.rs  types.rs
shared/src/complementary_types/: mod.rs  pixeldata.rs  pixelintensity.rs  point.rs  range.rs  resolution.rs  u8data.rs
shared/src/fractal_implementation/: fractal.rs  fractal_calcul.rs  mod.rs
shared/src/fractal_types/: iterated_sin_z.rs  julia_descriptor.rs  mandelbrot.rs  newton_raphson_z_3.rs  newton_raphson_z_4.rs  nova_newton_raphson_z_3.rs  nova_newton_raphson_z_4.rs
shared/src/messages/: fragment_request.rs  fragment_result.rs  fragment_task.rs  mod.rs
src/: main.rs
src/client/: client_services.rs  mod.rs
src/client_calcul/: libs.rs
src/data_structures/: complex.rs  fragmentRequest.rs  fragmentResult.rs  fragmentTask.rs  pixeldata.rs  pixelintensity.rs  point.rs  range.rs  resolution.rs  u8data.rs
src/fractal/: fractal.rs  mod.rs
src/messages/: fragment_request.rs  fragment_result.rs  fragment_task.rs  fragmentrequest.rs  fragmentresult.rs  fragmenttask.rs  mod.rs
src/models/: fractal.rs  (+2 more)
worker/: Cargo.toml
(+34 files in other folders)
