[package]
name = "frakt"
version = "0.1.0"
edition = "2021"
default-run = "frakt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
serde_json = "1.0.108"
