[package]
name = "jerry-smith"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
clap = { version = "4.4.11", features = ["derive"] }
network = { version = "0.1.0", path = "../network" }
env_logger = "0.10.1"
log = "0.4.20"
