[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "shared_lib"
path = "src/lib.rs"

[dependencies]
complex_math = { path = "../complex_math"}
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
image = "0.24"